--- a/app/views/sql_templates/index.html.erb
+++ b/app/views/sql_templates/index.html.erb
@@ -22,7 +22,7 @@
     <td><%= sql_template.locale %></td>
     <td><%= sql_template.handler %></td>
     <td><%= sql_template.partial %></td>
-    <td><%= sql_template.subdomain %></td>
+    <td><%= sql_template.subdomain.name %></td>
     <td><%= link_to 'Show', sql_template %></td>
     <td><%= link_to 'Edit', edit_sql_template_path(sql_template) %></td>
     <td><%= link_to 'Destroy', sql_template, confirm: 'Are you sure?', method: :delete %></td>
